// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractPackageFile() catches invalid names 1`] = `
Object {
  "deps": Array [
    Object {
      "depName": "kgabis/parson",
      "depType": "dependencies",
      "lookupName": "kgabis/parson",
      "prettyDepType": "dependency",
      "skipReason": "invalid-name",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() extracts engines 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "1.6.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "dependencies",
      "lookupName": "angular",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.6.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "lookupName": "@angular/cli",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "foo",
      "depType": "devDependencies",
      "lookupName": "foo",
      "prettyDepType": "devDependency",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "lookupName": "bar",
      "prettyDepType": "devDependency",
      "skipReason": "file",
    },
    Object {
      "currentValue": "",
      "datasource": "npm",
      "depName": "baz",
      "depType": "devDependencies",
      "lookupName": "baz",
      "prettyDepType": "devDependency",
      "skipReason": "empty",
    },
    Object {
      "currentValue": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "lookupName": "other",
      "prettyDepType": "devDependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": ">=1.7.0 <2.0.0",
      "depName": "atom",
      "depType": "engines",
      "lookupName": "atom",
      "prettyDepType": "engine",
      "skipReason": "unknown-engines",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": ">= 8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "engines",
      "lookupName": "nodejs/node",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "engine",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "npm",
      "currentValue": "^8.0.0",
      "datasource": "npm",
      "depName": "npm",
      "depType": "engines",
      "lookupName": "npm",
      "prettyDepType": "engine",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "disabled",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "engines",
      "lookupName": "yarn",
      "prettyDepType": "engine",
      "skipReason": "unknown-version",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "library",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": false,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() extracts non-npmjs 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "github:owner/a",
      "depName": "a",
      "depType": "dependencies",
      "lookupName": "a",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "github:owner/b#master",
      "depName": "b",
      "depType": "dependencies",
      "lookupName": "b",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
    },
    Object {
      "currentRawValue": "github:owner/c#v1.1.0",
      "currentValue": "v1.1.0",
      "datasource": "github-tags",
      "depName": "c",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/c",
      "lookupName": "owner/c",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/c",
    },
    Object {
      "currentValue": "github:owner/d#a7g3eaf",
      "depName": "d",
      "depType": "dependencies",
      "lookupName": "d",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
    },
    Object {
      "currentDigest": "49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentRawValue": "github:owner/e#49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "e",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/e",
      "lookupName": "owner/e",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/e",
    },
    Object {
      "currentRawValue": "owner/f#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "f",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/f",
      "lookupName": "owner/f",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/f",
    },
    Object {
      "currentValue": "gitlab:owner/g#v1.0.0",
      "depName": "g",
      "depType": "dependencies",
      "lookupName": "g",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "github:-hello/world#v1.0.0",
      "depName": "h",
      "depType": "dependencies",
      "lookupName": "h",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "@foo/bar#v2.0.0",
      "depName": "i",
      "depType": "dependencies",
      "lookupName": "i",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentValue": "github:frank#v0.0.1",
      "depName": "j",
      "depType": "dependencies",
      "lookupName": "j",
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
    Object {
      "currentDigest": "49b5aca",
      "currentRawValue": "github:owner/k#49b5aca",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "k",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/k",
      "lookupName": "owner/k",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/k",
    },
    Object {
      "currentDigest": "abcdef0",
      "currentRawValue": "github:owner/l.git#abcdef0",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "l",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/l",
      "lookupName": "owner/l",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/l",
    },
    Object {
      "currentRawValue": "https://github.com/owner/m.git#v1.0.0",
      "currentValue": "v1.0.0",
      "datasource": "github-tags",
      "depName": "m",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/m",
      "lookupName": "owner/m",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/m",
    },
    Object {
      "currentRawValue": "git+https://github.com/owner/n#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "n",
      "depType": "dependencies",
      "gitRef": true,
      "githubRepo": "owner/n",
      "lookupName": "owner/n",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/n",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() extracts npm package alias 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "1",
      "datasource": "npm",
      "depName": "a",
      "depType": "dependencies",
      "lookupName": "foo",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "npm",
      "depName": "b",
      "depType": "dependencies",
      "lookupName": "@foo/bar",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "npm:foo",
      "depName": "c",
      "depType": "dependencies",
      "lookupName": "c",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
      "skipReason": "unknown-version",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() extracts volta 1`] = `
Object {
  "deps": Array [
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "engines",
      "lookupName": "nodejs/node",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "engine",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "volta",
      "lookupName": "nodejs/node",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "volta",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "1.12.3",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "volta",
      "lookupName": "yarn",
      "prettyDepType": "volta",
    },
    Object {
      "currentValue": "5.9.0",
      "depName": "npm",
      "depType": "volta",
      "lookupName": "npm",
      "prettyDepType": "volta",
      "skipReason": "unknown-volta",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "library",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() extracts volta yarn unknown-version 1`] = `
Object {
  "deps": Array [
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "engines",
      "lookupName": "nodejs/node",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "engine",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "github-tags",
      "depName": "node",
      "depType": "volta",
      "lookupName": "nodejs/node",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "volta",
      "versioning": "node",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "unknown",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "volta",
      "lookupName": "yarn",
      "prettyDepType": "volta",
      "skipReason": "unknown-version",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "library",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() finds "npmClient":"npm" in lerna.json 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "lookupName": "autoprefixer",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "lookupName": "bower",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "lookupName": "browserify",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "lookupName": "browserify-css",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "lookupName": "cheerio",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "lookupName": "config",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "lookupName": "enabled",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "lookupName": "angular",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "lookupName": "angular-touch",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "lookupName": "angular-sanitize",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "lookupName": "@angular/core",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "lookupName": "config",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "**/@angular/cli",
      "depType": "resolutions",
      "lookupName": "@angular/cli",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "**/angular",
      "depType": "resolutions",
      "lookupName": "angular",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "config/glob",
      "depType": "resolutions",
      "lookupName": "glob",
      "prettyDepType": "resolutions",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() finds "npmClient":"yarn" in lerna.json 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "lookupName": "autoprefixer",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "lookupName": "bower",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "lookupName": "browserify",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "lookupName": "browserify-css",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "lookupName": "cheerio",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "lookupName": "config",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "lookupName": "enabled",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "lookupName": "angular",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "lookupName": "angular-touch",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "lookupName": "angular-sanitize",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "lookupName": "@angular/core",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "lookupName": "config",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "**/@angular/cli",
      "depType": "resolutions",
      "lookupName": "@angular/cli",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "**/angular",
      "depType": "resolutions",
      "lookupName": "angular",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "config/glob",
      "depType": "resolutions",
      "lookupName": "glob",
      "prettyDepType": "resolutions",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": "yarn",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() finds a lock file 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "lookupName": "autoprefixer",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "lookupName": "bower",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "lookupName": "browserify",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "lookupName": "browserify-css",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "lookupName": "cheerio",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "lookupName": "config",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "lookupName": "enabled",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "lookupName": "angular",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "lookupName": "angular-touch",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "lookupName": "angular-sanitize",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "lookupName": "@angular/core",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "lookupName": "config",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "**/@angular/cli",
      "depType": "resolutions",
      "lookupName": "@angular/cli",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "**/angular",
      "depType": "resolutions",
      "lookupName": "angular",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "config/glob",
      "depType": "resolutions",
      "lookupName": "glob",
      "prettyDepType": "resolutions",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": "yarn.lock",
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() finds complex yarn workspaces 1`] = `
Object {
  "deps": Array [],
  "ignoreNpmrcFile": undefined,
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "packageJsonVersion": "0.0.8",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() finds lerna 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "lookupName": "autoprefixer",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "lookupName": "bower",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "lookupName": "browserify",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "lookupName": "browserify-css",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "lookupName": "cheerio",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "lookupName": "config",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "lookupName": "enabled",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "lookupName": "angular",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "lookupName": "angular-touch",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "lookupName": "angular-sanitize",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "lookupName": "@angular/core",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "lookupName": "config",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "**/@angular/cli",
      "depType": "resolutions",
      "lookupName": "@angular/cli",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "**/angular",
      "depType": "resolutions",
      "lookupName": "angular",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "config/glob",
      "depType": "resolutions",
      "lookupName": "glob",
      "prettyDepType": "resolutions",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() finds simple yarn workspaces 1`] = `
Object {
  "deps": Array [],
  "ignoreNpmrcFile": undefined,
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "packageJsonVersion": "0.0.8",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractPackageFile() returns an array of dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "lookupName": "autoprefixer",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "lookupName": "bower",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "lookupName": "browserify",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "lookupName": "browserify-css",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "lookupName": "cheerio",
      "prettyDepType": "dependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "lookupName": "config",
      "prettyDepType": "dependency",
    },
    Object {
      "depName": "enabled",
      "depType": "devDependencies",
      "lookupName": "enabled",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    Object {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "lookupName": "angular",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "lookupName": "angular-touch",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "lookupName": "angular-sanitize",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "lookupName": "@angular/core",
      "prettyDepType": "devDependency",
    },
    Object {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "lookupName": "config",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "**/@angular/cli",
      "depType": "resolutions",
      "lookupName": "@angular/cli",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "**/angular",
      "depType": "resolutions",
      "lookupName": "angular",
      "prettyDepType": "resolutions",
    },
    Object {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "config/glob",
      "depType": "resolutions",
      "lookupName": "glob",
      "prettyDepType": "resolutions",
    },
  ],
  "ignoreNpmrcFile": undefined,
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "skipInstalls": true,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;
